2004-11-04  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: add magic for the audio/x-mpegurl mime-type

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml:
	* freedesktop.org.xml.in: sync freedesktop.org.xml with
	freedesktop.org.xml.in, fix freedesktop.org.xml.in to make it valid
	XML

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Added application/mathematica, patch by Chris
	Maes <i-chris@wolfram.com>, fixes #870

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Added application/x-chm, patch by Loic
	Minier <lool+freedesktop@dooz.org>, fixes #794 

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Added application/x-pdf alias, fixes #560

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Added application/x-par2, patch by dob 
	<abusenospam@free.fr>, fixes #750

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Improve lotus 123 files magic pattern. Patch
	by Filip Van Raemdonck <mechanix@debian.org>, fix #1276.

Mon Nov  1 14:49:57 2004  Jonathan Blandford  <jrb@redhat.com>

	* MAINTAINERS: New file to highlight that I'm no longer the
	maintainer.

Mon Nov  1 14:47:02 2004  Jonathan Blandford  <jrb@redhat.com>

	* autogen.sh: Patch from Thomas Fitzsimmons <fitzsim@redhat.com>
	to add support for building modules in separate build directories

2004-10-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add magic for audio/x-scpls

2004-10-07  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "eo" (Esperanto) to ALL_LINGUAS.

2004-09-29  Christopher Aillon  <caillon@redhat.com>

       * freedesktop.org.xml.in: Add application/vnd.mozilla.xul+xml and
       make MathML inherit from XML.

2004-09-13  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: Added "ms" (Malay) to ALL_LINGUAS

2004-09-10  Christophe Fergeau  <teuf@gnome.org>
